[package]
name = "climbing"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.22"
image = "0.25"
linregress = "0.5"
plotters = "0.3"
serde_yaml_ng = "0.10"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
